# la-patate-chaude

./: COMMAND.md  Cargo.toml
client/: Cargo.toml  app.rs  main.rs
client/src/: app.rs  broadcasters.rs  data_structures.rs  main.rs  md5_hashcash_test.rs  recover_secret_test.rs  utils.rs
client/src/hashcash/: md5_hascash_challenge.rs  mod.rs
client/src/recover_secret/: mod.rs  recover_secret_challenge.rs
communication_feature/: additional_message.md  possible_message.md  question.txt
shared/: Cargo.toml
shared/src/: lib.rs  utils.rs
