[package]
name = "la-patate-chaude"
version = "0.1.0"
authors = ["@soulte92", "@sarah-bouadi", "@cawa-dev"]

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "server macos"
path = "distribution/macos/server"

[[bin]]
name = "server windows"
path = "distribution/windows/server.exe"


[[test]]
name = "test"
path = "challenge/recover_secret/tests/test_recover_secret.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
random-string = "1.0"