[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
md5 = "0.7.0"
hex = "0.4.2"
data-encoding = "2.3.3"
rayon = "1.5.3"
num_cpus = "1.13.1"
random-string = "1.0"